--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,21 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Bullied_VR/Maps/MainMenu.MainMenu
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Bullied_VR/Blueprints/BP_Game_Instance.BP_Game_Instance_C
-GameDefaultMap=/Game/Bullied_VR/Maps/MainMenu.MainMenu
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=None
-GlobalDefaultServerGameMode=None
-
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/Bullied_VR")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/Bullied_VR")
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
+EditorStartupMap=/Game/Bullied_VR/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Bullied_VR/Maps/MainMenu2.MainMenu2
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -24,47 +10,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
+r.AllowOcclusionQueries=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
 vr.InstancedStereo=True
-r.SeparateTranslucency=0
-r.HZBOcclusion=0
-r.EyeAdaptionQuality=0
-r.SSR.MaxRoughness=0
-r.rhicmdbypass=0
-r.TiledReflectionEnvironmentMinimumCount=10
-
-[/Script/Engine.NavigationSystem]
-bAutoCreateNavigationData=True
-bAllowClientSideNavigation=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-DirtyAreasUpdateFreq=60.000000
-
-[/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=NavigationOnly
-DefaultCursor=None
-TextEditBeamCursor=None
-CrosshairsCursor=None
-HandCursor=None
-GrabHandCursor=None
-GrabHandClosedCursor=None
-SlashedCircleCursor=None
-ApplicationScale=1.000000
-UIScaleRule=ShortestSide
-CustomScalingRuleClass=None
-UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_8
-
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -79,6 +28,7 @@ bEnablePCM=True
 bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
+PhysicErrorCorrection=(PingExtrapolation=0.100000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
 LockedAxis=Invalid
 DefaultDegreesOfFreedom=Full3D
 BounceThresholdVelocity=200.000000
@@ -95,6 +45,8 @@ bDefaultHasComplexCollision=True
 bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
+bDisableKinematicStaticPairs=False
+bDisableKinematicKinematicPairs=False
 bDisableCCD=False
 bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
@@ -106,3 +58,6 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
