Valokorjauksia, valintawidgetin korjaus.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ r.AllowOcclusionQueries=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
 vr.InstancedStereo=True
+r.ForwardShading=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
