--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,7 +88,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MotionController_Right_Thumbstick_X)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="NewAxisMapping_0",Scale=-1.000000,Key=None)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=A)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
