--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -63,7 +63,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TriggerRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="TriggerLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
 +ActionMappings=(ActionName="ScrollUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="TriggerLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="TriggerLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +ActionMappings=(ActionName="ScrollUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
 +ActionMappings=(ActionName="ScrollDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Thumbstick_Down)
 +ActionMappings=(ActionName="ScrollDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
@@ -88,8 +88,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MotionController_Right_Thumbstick_X)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=-1.000000,Key=D)
-+AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=-1.000000,Key=Q)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=MotionController_Left_Thumbstick_X)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
