--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameInstanceClass=/Game/Bullied_VR/Blueprints/BP_Game_Instance.BP_Game_Instance_C
 EditorStartupMap=/Game/Bullied_VR/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/Bullied_VR/Maps/MainMenu2.MainMenu2
+GameDefaultMap=/Game/Bullied_VR/Maps/Level_1_House.Level_1_House
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
