--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,27 +7,40 @@ ProjectVersion=0.1.0.0
 bUseBorderlessWindow=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path=)
+StagingDirectory=(Path="C:/Users/RonjaKuk/Documents/Bullied_VR_build_11-06-19")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
-bNativizeBlueprintAssets=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bGenerateChunks=False
+bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bBuildHttpChunkInstallData=False
-HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataDirectory=(Path="")
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=True
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
-DefaultCulture=en
 bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
 bSkipEditorContent=False
-Build=Never
+bSkipMovies=False
++MapsToCook=(FilePath="/Game/Bullied_VR/Maps/Level_1_House")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
 
