Choice stuff, again.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,7 +89,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Turn",Scale=0.600000,Key=MotionController_Right_Thumbstick_X)
 +AxisMappings=(AxisName="LookUp",Scale=-0.500000,Key=MouseY)
 +AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=-1.000000,Key=Q)
-+AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=R)
 +AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=MotionController_Left_Thumbstick_X)
 DefaultTouchInterface=None
 ConsoleKey=None
