--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameInstanceClass=/Game/Bullied_VR/Blueprints/BP_Game_Instance.BP_Game_Instance_C
 EditorStartupMap=/Game/Bullied_VR/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Bullied_VR/Maps/Level_1_House.Level_1_House
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
