--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -40,6 +40,7 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Bullied_VR/Maps/Level_1_House")
++MapsToCook=(FilePath="/Game/Bullied_VR/Maps/Level_1_House_Nightmare")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
